# lunar-rover-project

./: .gitignore  README.md  main_earth_base.py  main_lunar_hopper.py  main_lunar_rover.py  main_lunar_tunneller.py  play_video.py  requirements.txt  rfc 9999.txt
earth-base/: main.py
earth-base/src/: .env.local  config.py  get_cmds.py  recieve_video.py  rover_receive.py  rover_send.py  video_player.py
earth-base/utils/: client_server_comm.py  make_packet.py  prevent_corruption.py  simulate.py
earth_base/: .env.local  config.py  get_cmds.py  handshake.py  recieve_video.py  rover_receive.py  rover_send.py  video_player.py
lunar-rover/: Dockerfile  main.py  requirements.txt  rover.h
lunar-rover/src/: .env.local  config.py  earth_receive.py  earth_send.py  send_video.py
lunar-rover/utils/: client_server_comm.py  config.json  make_packet.py  prevent_corruption.py  simulate.py  video_processing.py
lunar_hopper/: .env.local  config.py  handshake.py  rover_receive.py  rover_send.py  send_video.py
lunar_rover/: .env.local  config.py  earth_receive.py  earth_send.py  handshake.py  recieve_video.py  send_video.py
lunar_tunneller/: config.py  handshake.py  rover_receive.py  rover_send.py  send_video.py  tunneller_receive.py
test-env/: CMakeLists.txt  conanfile.txt
test-env/src/: main.cpp
utils/: client_server_comm.py  compress.py  config.py  make_packet.py  prevent_corruption.py  security.py  simulate.py
